<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/setting_string" >

        <ListPreference
            android:defaultValue="@string/def_freq"
            android:entries="@array/freq_name"
            android:entryValues="@array/freq_value"
            android:key="freq_key"
            android:title="@string/freq_setting" android:summary="@string/freq_summary"/>

        <ListPreference
            android:defaultValue="@string/def_buf"
            android:entries="@array/buf_value"
            android:entryValues="@array/buf_value"
            android:key="buf_key"
            android:title="@string/buf_setting" android:summary="@string/buf_summary"/>

        <ListPreference
            android:defaultValue="15"
            android:entries="@array/delay_name"
            android:entryValues="@array/delay_value"
            android:key="delay_key"
            android:title="@string/delay_setting" android:summary="@string/delay_summary"/>
        
        <PreferenceScreen
            android:key="pcm_key"
            android:summary="@string/pcm_summary"
            android:title="@string/pcm_name" >

            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.bkc.android.mdxplayer.FileDiag"
                android:targetPackage="com.bkc.android.mdxplayer" >

                <extra
                    android:name="dirMode"
                    android:value="true" />
            </intent>
        </PreferenceScreen>

</PreferenceCategory>

</PreferenceScreen>