<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space_string"
                android:textSize="25sp" >
            </TextView>

            <TextView
                android:id="@+id/filename_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space_string" >
            </TextView>

            <TextView
                android:id="@+id/volume_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space_string" >
            </TextView>
        </LinearLayout>

        <TextView
            android:id="@+id/time_value"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/timeinfo_string"
            android:textSize="40sp" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ctrl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </LinearLayout>

        <SeekBar
            android:id="@+id/seektime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="false" >
        </SeekBar>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/rev_btn"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:scaleType="fitCenter"
	            android:layout_weight="1"
                android:contentDescription="@string/rev_desc"
                android:src="@drawable/rev" >
            </ImageButton>

            <ImageButton
                android:id="@+id/stop_btn"
                android:layout_width="0dip"
                android:layout_weight="1"                
                android:layout_height="fill_parent"
                android:scaleType="fitCenter"
				android:contentDescription="@string/stop_desc"
                android:src="@drawable/stop" >
            </ImageButton>

            <ImageButton
                android:id="@+id/play_btn"
                android:layout_width="0dip"
                android:layout_weight="1"                
                android:layout_height="fill_parent"
                android:scaleType="fitCenter"
				android:contentDescription="@string/play_desc"                
                android:src="@drawable/play" >
            </ImageButton>

            <ImageButton
                android:id="@+id/ff_btn"
                android:layout_width="0dip"
                android:layout_weight="1"                
                android:layout_height="fill_parent"
                android:scaleType="fitCenter"
                android:contentDescription="@string/ff_desc"              
                android:src="@drawable/ff" >
            </ImageButton>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>